@@ -94,6 +94,7 @@ sub run_hook {
 
     } elsif ($hook eq "update-buildflags") {
 	my $flags = shift @params;
+
 	if (debarch_eq(get_host_arch(), 'ppc64')) {
 	    for my $flag (qw(CFLAGS CXXFLAGS FFLAGS)) {
 		$flags->set($flag, '-g -O3', 'vendor');
@@ -101,6 +102,9 @@ sub run_hook {
 	}
 	# Per https://wiki.ubuntu.com/DistCompilerFlags
 	$flags->set('LDFLAGS', '-Wl,-Bsymbolic-functions', 'vendor');
+
+	# Run the Debian hook to add hardening flags
+	$self->SUPER::run_hook($hook, $flags);
 
 	# Allow control of hardening-wrapper via dpkg-buildpackage DEB_BUILD_OPTIONS
 	my $build_opts = Dpkg::BuildOptions->new();
